fix links on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 .links {
   font-size: 3em;
   margin: 0 auto;
-  width: 25%;
+  width: 50%;
   list-style: none;
 }
 
